Fix scroll on mobile

--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,7 @@ ul {
         display: flex;
         flex-direction: column;
         height: 100vh;
+        overflow: hidden;
     }
 
     .info-panel {
@@ -181,5 +182,6 @@ ul {
     #map {
         flex: 1;
         width: 100%;
+        height: 100%;
     }
 }
